--- a/i3/config
+++ b/i3/config
@@ -5,6 +5,12 @@
 #       https://github.com/Calebe94
 # Version:
 
+# Monitors
+# You can list your monitor with:
+# xrandr -q
+set $monitor_one DP-1
+set $monitor_two DP-2
+
 # Windows modkey
 set $mod Mod4
 
@@ -34,7 +40,7 @@ bindsym $mod+Shift+c exec code
 bindsym $mod+Shift+t exec thunar
 
 # Rofi menu launcher
-set $rofi_theme "$HOME/.i3/rofithemes/flat-blue.rasi"
+set $rofi_theme "$HOME/.config/i3/rofithemes/flat-blue.rasi"
 bindsym $mod+d exec rofi -show run -config $rofi_theme
 bindsym $mod+Shift+d exec rofi -show window -config $rofi_theme
 
@@ -65,12 +71,9 @@ bindsym $mod+v split v
 # Fullscreen mode
 bindsym $mod+f fullscreen toggle
 #bindsym --release $mod+y exec "sleep 0.2; xdotool key f; i3-msg fullscreen toggle"
-#bindsym $mod+y fullscreen disable; floating enable, sticky enable, resize set 250 170;
+bindsym $mod+y fullscreen disable; floating enable, sticky enable, resize set 250 170;
 #bindsym $mod+y fullscreen disable, floating enable, resize set 250 170, sticky enable, move window to position 1515 20
-bindsym $mod+y exec youtubepip
-for_window [class="YoutubePIP"] fullscreen disable, floating enable, sticky enable, resize set 500 300;
 
-#for_window [window_role=floating_youtube] fullscreen disable, floating enable 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
@@ -90,11 +93,11 @@ set $workspace1 "1: Terminal "
 set $workspace2 "2: Navigation "
 set $workspace3 "3: Folders "
 set $workspace4 "4: Code Editing "
-set $workspace5 "5: Texting "
+set $workspace5 "5: Texting "
 set $workspace6 "6: Mail " 
 set $workspace7 "7: Notes "
 set $workspace8 "8: PDF "
-set $workspace9 "9: Tests "
+set $workspace9 "9: Tests "
 set $workspace10 "10: Music "
 
 # switch to workspace
@@ -121,7 +124,18 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
+# Fixing workspace to a certain monitor
+
+workspace $workspace1 output $monitor_one
+workspace $workspace2 output $monitor_two
+#workspace $workspace3 output $monitor_one
+workspace $workspace4 output $monitor_one
+workspace $workspace5 output $monitor_two
+workspace $workspace5 output $monitor_two
+
 # Forcing apps on workspaces
+assign [class="Terminology"] $workspace1
+assign [class="terminology"] $workspace1
 # Web apps
 assign [class="Firefox"] $workspace2
 assign [class="Chromium"] $workspace2
@@ -137,6 +151,7 @@ assign [class="Thunar"] $workspace3
 assign [class="TelegramDesktop"] $workspace5
 assign [class="whatsapp-desktop"] $workspace5
 assign [class="ms-skype"] $workspace5
+assign [class="Slack"] $workspace5
 # Music apps
 assign [class="spotify"] $workspace10
 assign [class="Spotify"] $workspace10
@@ -148,8 +163,14 @@ assign [class="Thunderbird"] $workspace6
 # Notes apps
 assign [class="simplenote"] $workspace7
 assign [class="Simplenote"] $workspace7
+assign [class="KeeWeb"] $workspace7
 # PDF's apps
 assign [class="okular"] $workspace8
+# Test Apps
+assign [class="VirtualBox"] $workspace9
+
+# URGENT WORKSPACES
+bindsym $mod+u [urgent=latest] focus
 
 # reload the configuration file
 # bindsym $mod+Shift+c reload
@@ -181,8 +202,12 @@ mode "resize" {
 
 # Resize binding
 bindsym $mod+r mode "resize"
-
-
+bindsym $mod+Ctrl+Right resize grow width 10 px or 10 ppt
+bindsym $mod+Ctrl+Up resize shrink height 10 px or 10 ppt
+bindsym $mod+Ctrl+Down resize grow height 10 px or 10 ppt
+bindsym $mod+Ctrl+Left resize shrink width 10 px or 10 ppt
+bindsym $mod+Ctrl+minus resize shrink up 10 px or 10 ppt, resize shrink down 10 px or 10 ppt, resize shrink left 20 px or 20 ppt, resize shrink right 20 px or 20 ppt
+bindsym $mod+Ctrl+equal resize grow up 10 px or 10 ppt, resize grow down 10 px or 10 ppt, resize grow left 20 px or 20 ppt, resize grow right 20 px or 20 ppt
 # Color config
 set $bg-color 	         #2f343f
 set $inactive-bg-color   #2f343f
@@ -201,10 +226,10 @@ new_window pixel 0
 # i3wm bar
 bar {
         # Bar program
-        status_command i3blocks -c ~/.i3/i3blocks.conf
+        status_command i3blocks -c $HOME/.config/i3/i3blocks.conf
         
         # Position of the bar
-        position top
+        position bottom
         
         # Bar colors
         colors {
@@ -249,25 +274,40 @@ exec syndaemon -i 0.3 -t -K -R
 exec_always choose_wallpaper
 
 #set $feh exec --no-startup-id feh --bg-scale
-exec feh --bg-scale ~/Pictures/language_tree.png
+exec feh --bg-scale ~/Imagens/language_tree.png
 # Sysmem compositor
 exec_always compton
 
 # Taking a Screenshot
 
-bindsym $mod+Ctrl+4 exec shutter -f
+bindsym $mod+p exec shutter -s -e -o 'Imagens/%y-%m-%d_%T.png'
 for_window [class="Shutter"] fullscreen disable, floating enable;
 
 # Launch at APPs startup
 
 #exec firefox
-exec chromium # Launch chromium at startup
-exec terminology # Launch terminology at startup 
-exec thunar # Launch thunar at startup
-exec thunderbird # Launch thunderbird
-exec code
+exec chromium-browser 	# Launch chromium at startup
+exec terminology 	# Launch terminology at startup 
+exec thunar 		# Launch thunar at startup
+exec thunderbird 	# Launch thunderbird
+exec code 		# Launch VSCode
+exec slack 		# Launch Slack
+exec telegram		# Launch Telegram
 
-gaps inner 3
-gaps outer 3
+# XFCE Menu
 
+bindsym $mod+m exec xfdashboard
 for_window [class="^.*"] border pixel 0
+gaps inner 10
+gaps outer 0
+
+# URGENT Window
+# It focus on a window once it becomes urgent
+# You could also combine criteria if you only want to focus certain applications:
+# for_window [urgent="latest" class="XTerm"] focus
+for_window [urgent=latest] focus
+
+default_orientation vertical
+for_window [class=".*"] split toggle 
+#bindsym $mod+shift+q split toggle kill 
+#bindsym $mod+e layout toggle split 
