--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -24,9 +24,23 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/lib/i3blocks/$BLOCK_NAME
-separator_block_width=15
+command=/usr/share/i3blocks/$BLOCK_NAME
+separator_block_width=10
 markup=none
+
+[keyboard]
+label=
+interval=1
+
+[screebrightness]
+label=
+interval=1
+command=/home/calebe94/.config/i3/scripts/get_brightness --screen
+
+[keyboardbrightness]
+label=
+interval=1
+command=/home/calebe94/.config/i3/scripts/get_brightness --keyboard
 
 # Volume indicator
 #
@@ -35,11 +49,12 @@ markup=none
 # See the script for details.
 [volume]
 label= 
-instance=Master
+#instance=Master
 #instance=PCM
 interval=1
-signal=10
-command=/usr/lib/i3blocks/volume 5 pulse
+#signal=10
+#command=pavucontrol
+#command=/usr/share/i3blocks/volume 5 pulse
 
 # Generic media player support
 #
@@ -71,31 +86,40 @@ signal=10
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-[disk]
-label=
+#[disk]
+#label=
 #instance=/mnt/data
-interval=30
+#interval=30
 
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
+#[iface]
 #instance=wlan0
-label=
-interval=10
-separator=false
+#label=
+#interval=10
+#separator=false
+
+[clickme]
+#align=center
+full_text= Wifi
+command=st nmtui
+separator=false 
 
 [wifi]
 instance=wlp3s0
-#label=📶 
-label=
+#label=
 interval=10
-separator=false
+separator=true
 
 # [bandwidth]
 # #instance=eth0
 # interval=5
+
+
+#min_width=Button=? x=? y=?
+#command=echo "Button=$button x=$x y=$y"
 
 # CPU usage
 #
@@ -115,8 +139,8 @@ separator=false
 #
 # The battery instance defaults to 0.
 [battery]
-#label=
-label=⚡
+label=
+#label=⚡
 #instance=1
 interval=30
 
@@ -124,7 +148,7 @@ interval=30
 #
 [time]
 label=
-command=date '+%d-%m-%Y | %H:%M:%S'
+command=date '+%d-%m-%Y  %H:%M:%S '
 interval=1
 
 # OpenVPN support
